Suavizado a maneira que o header fixa na home do modo desktop e removido o overflow-x para adaptar o modo mobile para limitação das telas

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -473,12 +473,10 @@
 
       .img-container {
         width: 40%;
-
         img {
           border: 2px solid #f0e6df;
           border-radius: 15px;
-          height: 50vh;
-          width: 70%;
+          width: 50%;
         }
       }
     }
