--- a/src/app/shared/card/card.component.scss
+++ b/src/app/shared/card/card.component.scss
@@ -17,7 +17,6 @@
       background-color: #f0e6df;
       height: 8rem;
       width: 8rem;
-      box-sizing: border-box;
       cursor: pointer;
       transition: background-color 0.3s ease, transform 0.2s ease;
 
