--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,6 +1,7 @@
 @media (max-width: 767px) {
   header {
     background-color: #dbaca3;
+    height: 5rem;
 
     section {
       .mobile-menu {
@@ -45,6 +46,7 @@
     top: 0;
     left: 0;
     right: 0;
+    width: 100%;
     z-index: 1000;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   }
@@ -59,6 +61,7 @@
       width: 100%;
       box-sizing: border-box;
       box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+      height: 5rem;
 
       section {
         .desktop-menu {
@@ -107,6 +110,7 @@
         top: 0;
         left: 0;
         right: 0;
+        width: 100%;
         z-index: 1000;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
       }
