--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,6 @@ $psico-mara-site-theme: mat.define-theme((
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 html, body {
